[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "google-genai>=1.41.0",
    "openai>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
]
